[tool.poetry]
name = "asteroid-shooter"
version = "0.1.0"
description = "Asteroid shooter game using PyGame"
authors = ["Askharov A."]
license = "No License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
